--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -3,7 +3,7 @@ title: Welcome
 cover-photo: assets/images/banner.jpg
 cover-photo-alt: example cover photo
 auto-header: none
-icon: fa-comment
+icon: fa-grin-beam
 order: 1
 ---
 <header>
