fixing welcome page icon: version

--- a/_sections/welcome.html
+++ b/_sections/welcome.html
@@ -3,7 +3,7 @@ title: Welcome
 cover-photo: assets/images/banner.jpg
 cover-photo-alt: example cover photo
 auto-header: none
-icon: fa-grin-beam
+icon: fa-globe
 order: 1
 ---
 <header>
